Fixed homepage rendering on mobile.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -638,7 +638,8 @@ input[type='text'], input[type='email'] {
 
   .homepage-content {
     background-color: white;
-    padding: 40px 0;
+    padding-top: 40px;
+    padding-bottom: 40px;
 
     &:nth-child(even)  {
       background-color: #274059;
